# sloppy-joe

./: .coherence  .gitignore  .pre-commit-hooks.yaml  CLAUDE.md  CONFIG.md  Cargo.toml  LICENSE  README.md  action.yml  config.example.json  deny.toml  dist-workspace.toml  flake.nix
.github/: sloppy-joe-self-check.json
.github/workflows/: ci.yml  release.yml
docs/: issue-ai-code-linting.md
docs/blog/: 2026-03-24-litellm-attack-blocked.md  2026-03-31-axios-north-korea-defeated-by-sandwich.md  2026-04-03-how-sloppy-joe-evaluates-itself.md
docs/ecosystems/: CARGO.md  DOTNET.md  GO.md  GOLANG.md  JAVASCRIPT.md  JVM.md  NPM.md  PHP.md  PYPI.md  PYTHON.md  README.md  RUBY.md  RUST.md
docs/specs/: architecture-v2.md  cargo-provenance-hardening.md  config-bootstrap.md  config-injection.md  lockfile-handling.md  manifest-coverage.md  publisher-install-script-combo-plan.md  publisher-install-script-combo-progress.md  publisher-install-script-combo.md  python-index-allowlists.md  python-provenance-hardening.md  registry-similarity.md  scan-modes.md  transitive-scanning.md  vulnerability-coverage.md
docs/superpowers/plans/: 2026-03-22-lockfile-handling.md  2026-04-03-config-bootstrap.md  2026-04-03-scan-modes.md  2026-04-04-python-hardening-phase1.md  2026-04-05-python-index-allowlists.md
fixtures/: README.md
fixtures/cargo/: README.md
fixtures/cargo/git-dependency-fail/: Cargo.toml  fixture.json
fixtures/cargo/registry-not-allowlisted-fail/: Cargo.toml  fixture.json
fixtures/cargo/workspace-pass/: fixture.json
fixtures/dotnet/: README.md
fixtures/dotnet/missing-lock-fail/: fixture.json
fixtures/dotnet/packages-lock-pass/: fixture.json  packages.lock.json
fixtures/go/: README.md
fixtures/go/go-sum-pass/: fixture.json  go.mod
fixtures/go/local-replace-pass/: fixture.json  go.mod
fixtures/go/missing-go-sum-fail/: fixture.json  go.mod
fixtures/jvm/: README.md
fixtures/jvm/custom-repo-fail/: build.gradle  fixture.json
fixtures/jvm/gradle-pass/: fixture.json  gradle.lockfile
fixtures/jvm/maven-warning/: fixture.json  pom.xml
fixtures/npm/: README.md
fixtures/npm/bundled-entry/: package-lock.json
fixtures/npm/file-lock-target-mismatch/: package-lock.json  package.json
fixtures/npm/long-tail-combo-squat/: package-lock.json  package.json  sloppy-joe.json
fixtures/npm/override-only-drift/: package-lock.json  package.json
fixtures/npm/private-scope-typo/: package-lock.json  package.json  sloppy-joe.json
fixtures/npm/v1-range-drift/: package.json  (+1 more)
fixtures/php/: README.md
fixtures/python/: README.md
fixtures/python/poetry-source-mismatch-fail/: fixture.json  pyproject.toml
fixtures/python/poetry-source-pass/: fixture.json  pyproject.toml  sloppy-joe.json
fixtures/python/poetry-unused-source-warn/: fixture.json  pyproject.toml
fixtures/python/uv-source-mismatch-fail/: fixture.json  pyproject.toml  sloppy-joe.json
fixtures/ruby/: README.md
scripts/: audit-release-binaries.sh
specs/: ARCHITECTURE.md  DECISIONS.md  config-registry-plan.md  config-registry-progress.md  config-registry.md
src/: cache.rs  config.rs  ecosystem.rs  error_budget.rs  lib.rs  lib_tests.rs  main.rs  report.rs  version.rs
src/checks/: canonical.rs  existence.rs  malicious.rs  metadata.rs  metadata_tests.rs  mod.rs  names.rs  pipeline.rs  signals.rs  similarity.rs
src/config/: mod.rs  registry.rs
src/lockfiles/: bun.rs  cargo.rs  composer.rs  dotnet.rs  gradle.rs  mod.rs  npm.rs  pnpm.rs  python.rs  ruby.rs  uv.rs  yarn.rs
src/parsers/: cargo_toml.rs  composer_json.rs  csproj.rs  gemfile.rs  go_mod.rs  jvm.rs  mod.rs  package_json.rs  pipfile.rs  pyproject_toml.rs  python_scope.rs  requirements.rs  setup_cfg.rs  setup_py.rs
src/registry/: corpus.rs  crates_io.rs  go.rs  maven.rs  mod.rs  npm.rs  nuget.rs  packagist.rs  pypi.rs  rubygems.rs
(+57 files in other folders)
