[package]
name = "sloppy-joe"
version = "0.10.0"
edition = "2024"
description = "Detect hallucinated, typosquatted, and non-canonical dependencies"
license = "Apache-2.0"
repository = "https://github.com/brennhill/sloppy-joe"
homepage = "https://github.com/brennhill/sloppy-joe"
readme = "README.md"
keywords = ["security", "dependencies", "typosquatting", "supply-chain", "ai"]
categories = ["command-line-utilities", "development-tools"]
authors = ["Brenn Hill"]

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
reqwest = { version = "0.12", features = ["rustls-tls", "json", "stream"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strsim = "0.11"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
colored = "2"
futures = "0.3"
toml = "0.8"
async-trait = "0.1"
libc = "0.2"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
