[package]
name = "sloppy-joe"
version = "0.10.0"
edition = "2024"
description = "Detect hallucinated, typosquatted, and non-canonical dependencies"
license = "Apache-2.0"
repository = "https://github.com/brennhill/sloppy-joe"
homepage = "https://github.com/brennhill/sloppy-joe"
readme = "README.md"
keywords = ["security", "dependencies", "typosquatting", "supply-chain", "ai"]
categories = ["command-line-utilities", "development-tools"]
authors = ["Brenn Hill"]

[dependencies]
clap = { version = "=4.6.0", features = ["derive", "env"] }
reqwest = { version = "=0.12.27", features = ["rustls-tls", "json", "stream"], default-features = false }
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"
serde_yaml = "=0.9.34"
json5 = "=0.4.0"
strsim = "=0.11.1"
tokio = { version = "=1.49.0", features = ["full"] }
anyhow = "=1.0.102"
colored = "=2.1.0"
futures = "=0.3.32"
toml = "=0.8.23"
async-trait = "=0.1.89"
libc = "=0.2.183"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
