[project]
name = "fixture-uv-source-mismatch"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["torch==2.6.0"]

[tool.uv]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu124"

[[tool.uv.index]]
name = "mirror"
url = "https://packages.example.com/simple"

[tool.uv.sources]
torch = { index = "pytorch" }
